# NoteMind

./: .env.example  .gitignore  FILE_ISOLATION.md  README.md  eslint.json  eslint.txt  package-lock.json  pyproject.toml  setup.py
backend/: cli.py
backend/api/: server.py  websockets.py
backend/core/: config.py  queue.py
backend/db/: chroma_manager.py  mongo_manager.py
backend/execution/: agent_simulator.py  agents.py
backend/observer/: translator.py  watcher.py
backend/tui/: app.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  page.js
frontend/src/components/: CustomNode.js  MarkdownDrawer.js
landing-site/: package.json
landing-site/src/app/: globals.css
landing-site/src/components/: ArchitectureSection.tsx  ComparisonSection.tsx  Footer.tsx  HeroGraphMock.tsx  HeroSection.tsx  InstallTerminal.tsx  LiveExecutionDemo.tsx
nodemind-release-kit/: DISTRIBUTION_SETUP.md  install.sh
nodemind-release-kit/.github/workflows/: release.yml
nodemind-release-kit/arch/: PKGBUILD
nodemind-release-kit/homebrew/: nodemind.rb
nodemind-release-kit/npm/: README.md  package.json
nodemind.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/app/: globals.css  layout.tsx  page.tsx
src/components/: Features.tsx  FeaturesSection.tsx  Footer.tsx  Header.tsx  Hero.tsx  InstallTabs.tsx  LiveExecutionDemo.tsx  Navbar.tsx  PrivacyFAQ.tsx  Stats.tsx  TerminalDemo.tsx
src/lib/: site-content.ts
